Fixed broken styles from previous commit

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,9 @@ html, body {
   margin-bottom: -70px;
 }
 
-#wrapper { padding-top: 90px; }
+@media (min-width: 980px) {
+  #wrapper { padding-top: 90px; }
+}
 
 #footer-pusher { height: 70px; }
 
