--- a/app/assets/stylesheets/secure.css.scss
+++ b/app/assets/stylesheets/secure.css.scss
@@ -1,5 +1,4 @@
 @import "variables";
-@import "mixins";
 @import "bootstrap/mixins";
 
 body {
@@ -7,7 +6,7 @@ body {
 }
 
 .box-small {
-  @include gradient-vertical($white, $whiteSmoke);
+  @include gradient-vertical($boxBackground, $boxBackgroundHighlight);
   @include border-radius(5px);
   @include box-shadow(inset 0 1px 0 $white);
   border: 1px solid $grayLightish;
@@ -51,7 +50,7 @@ body {
 
 .box {
   .box-header {
-    @include gradient-vertical($white, $whiteSmoke);
+    @include gradient-vertical($boxBackground, $boxBackgroundHighlight);
     @include border-radius(5px 5px 0 0);
     @include box-shadow(inset 0 1px 0 $white);
     border: 1px solid $grayLightish;
@@ -67,18 +66,11 @@ body {
     }
     @include border-radius(0 0 5px 5px);
 
-    padding: 10px;
+    padding: 20px;
     background-color: $white;
 
     .well {
       fieldset {
-        legend {
-          & + .row, & + .row-fluid {
-            margin-top: 18px;
-            -webkit-margin-top-collapse: separate;
-          }
-        }
-
         &.form-vertical {
           .control-group {
             > .controls {
